--- a/src/main/resources/templates/update.html
+++ b/src/main/resources/templates/update.html
@@ -26,9 +26,9 @@
 	<div class="limiter">
 		<div class="container-login101">
 			<div class="wrap-login100">
-				<div class="login100-pic js-tilt" data-tilt>
+				<!-- <div class="login100-pic js-tilt" data-tilt>
 					<img src="images/img-01.png" alt="IMG">
-				</div>
+				</div> -->
 
 				<form class="login100-form validate-form" th:action="@{/login}" modelAttribute="login" method="post">
 					<span class="login100-form-title">
@@ -64,7 +64,7 @@
 					</div>
 
 					<div class="text-center p-t-136">
-						<a class="txt2" th:href="@{'signup'}">
+						<a class="txt2" href="#">
 							Tạo mới tài khoản
 							<i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
 						</a>
