--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -15,20 +15,21 @@
             <img src="https://avatars.githubusercontent.com/u/41117245?v=4" alt="">
         </div>
         <div class="content">
-            <h2 class="name">Nguyễn Thanh Sang</h2>
-            <h3 class="fullstack">Full Stack Engineer<br/>
-            <!--<a href="https://www.youracclaim.com/badges/e678fb12-49ea-4609-8d97-622d7416880d" class="certified" target="_blank">OCA® certified</a></h3>-->
+            <p style="color: red" th:if="${error != null}" th:text="${error}"></p>
+            <h2 class="name" th:text="${session.user.firstName + ' ' + session.user.lastName}"></h2>
+            <h3 class="fullstack" th:text="${session.user.job}"></h3>
             <h3 class="email">
-                <a href="mailto:sangdoannguyen7@gmail.com">sangdoannguyen7@gmail.com</a>
+                <a href="mailto:${session.user.email}" th:text="${session.user.email}"></a>
             </h3>
+
         </div>
         <div class="contact">
-            <a href="https://www.linkedin.com/in/abdeladhim-abbassi/">
+            <a th:href="@{'/update'}">
                 <h2 class="fullstack">Đổi mật khẩu</h2>
             </a>
         </div>
         <div class="contact">
-            <a href="https://www.linkedin.com/in/abdeladhim-abbassi/">
+            <a th:href="@{'/logout'}">
                 <h2 class="fullstack">Đăng xuất</h2>
             </a>
         </div>
